--- a/WordLearner.Infrastructure/WordLearner.Infrastructure.csproj
+++ b/WordLearner.Infrastructure/WordLearner.Infrastructure.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WordLearner.Application\WordLearner.Application.csproj" />
     <ProjectReference Include="..\WordLearner.Domain\WordLearner.Domain.csproj" />
   </ItemGroup>
